[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/BBCodeEditor.gd" type="Script" id=1]

[sub_resource type="GDScript" id=1]
script/source = "extends Button

func _pressed():
	OS.shell_open(\"https://docs.godotengine.org/en/3.5/tutorials/ui/bbcode_in_richtextlabel.html\")
"

[node name="BBCodeEditor" type="VBoxContainer"]
margin_right = 259.0
margin_bottom = 175.0
script = ExtResource( 1 )

[node name="CodeEdit" type="TextEdit" parent="."]
margin_right = 259.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
wrap_enabled = true

[node name="Control" type="CanvasLayer" parent="."]
layer = 5

[node name="PanelContainer" type="PanelContainer" parent="Control"]
margin_right = 26.0
margin_bottom = 14.0
grow_vertical = 2
mouse_filter = 1
size_flags_vertical = 4

[node name="ScrollContainer" type="ScrollContainer" parent="Control/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 19.0
margin_bottom = 7.0
mouse_filter = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Control/PanelContainer/ScrollContainer"]
margin_bottom = 624.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 4
bbcode_enabled = true
bbcode_text = "njkjncddcnkddc
d
c
d
c
d

cd
c
dc
d
cd"
text = "njkjncddcnkddc
d
c
d
c
d

cd
c
dc
d
cd"
fit_content_height = true
scroll_active = false

[node name="TagOpener" type="Button" parent="."]
margin_top = 154.0
margin_right = 259.0
margin_bottom = 175.0
text = "Подсказка по тегам"
script = SubResource( 1 )

[connection signal="text_changed" from="CodeEdit" to="." method="_on_CodeEdit_text_changed"]
